# bluesnow

./: .env  Cargo.toml  README.md
config/: base.toml  dev.toml
crates/bluesnow-result/: Cargo.toml
crates/bluesnow-result/src/: error.rs  lib.rs  result.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  cli.rs  db.rs  lib.rs  main.rs
crates/entity/: Cargo.toml
crates/entity/src/: api.rs  article.rs  category.rs  lib.rs  menu.rs  prelude.rs  role.rs  role_mtm_api.rs  role_mtm_menu.rs  user.rs  user_mtm_role.rs
crates/entity/src/utils/: links.rs  mod.rs  resource.rs
crates/iden/: Cargo.toml
crates/iden/src/: lib.rs
crates/iden/src/m0_1/: api.rs  article.rs  category.rs  dict.rs  menu.rs  mod.rs  role.rs  role_mtm_api.rs  role_mtm_menu.rs  user.rs  user_mtm_role.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs
crates/migration/src/m0_1_create_table/: mod.rs
crates/server/: Cargo.toml
crates/server/data/: api.json  role.json  role_mtm_api.json
crates/server/src/: boot.rs  environment.rs  lib.rs
crates/server/src/config/: db.rs  jwt.rs  mod.rs  server.rs
crates/server/src/context/: mod.rs
crates/server/src/domain/: mod.rs
crates/server/src/domain/req/: category.rs  user.rs
crates/server/src/domain/resp/: category.rs  mod.rs  user.rs
crates/server/src/handler/: category.rs  mod.rs  user.rs
crates/server/src/middleware/: jwt.rs  mod.rs
crates/server/src/param/: mod.rs
crates/server/src/repo/: category.rs  mod.rs  role.rs  user.rs
crates/server/src/routes/: category.rs  mod.rs  user.rs
crates/server/src/service/: category.rs  user.rs
crates/server/src/utils/: db.rs  entity.rs  hash.rs  mod.rs  pwd.rs  tree.rs
