[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/cli"]
[workspace.dependencies]
iden={path = "crates/iden"}
migration = {path = "crates/migration"}
entity={path = "crates/entity"}
server={path = "crates/server"}
bluesnow-result={path = "crates/bluesnow-result"}
tokio="1.38.0"
axum="0.7.5"
sea-orm={version = "1.0.0-rc.6",features = ["runtime-tokio-rustls","sqlx-postgres"]}
sea-orm-migration={version = "1.0.0-rc.6",features = ["runtime-tokio-rustls","sqlx-postgres"]}
thiserror = "1.0.61"
anyhow = "1.0.86"
garde = "0.19.0"
strum = "0.26.2"
serde = "1.0.203"
figment = "0.10.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
tower = "0.4.13"
clap = "4.5.6"
async-trait="0.1.80"
argon2 = "0.6.0-pre.0"
axum-extra = "0.9.3"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
chrono = "0.4.38"
serde_json = "1.0.117"
dotenvy = "0.15.7"
